--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,1 @@
-<html>
-    <head>
-        <title>Test</title>
-        {# Bootstrap CSS #}
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="container">
-         <h1 class="display-1" >Youtube to MP4 converter</h1>
-        {# Form fo /actor route #}
-        <form action="/actor" method="post" >
-        <input class="form-control" type="text" name="youtube_url" placeholder="Youtube video url" >
-        <br>
-        <input class="btn btn-primary float-right" type="submit">
-        </form>
-        </div>
-    </body>
-</html>
+<html> <head> <title>NSS</title> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> </head> <body> <div class="container"> <h1 class="display-1" >Youtube to MP4 converter</h1> <form action="/actor" method="post" > <input class="form-control" type="text" name="youtube_url" placeholder="Youtube video url" > <br><input class="btn btn-primary float-right" type="submit"> </form> </div></body></html>
